--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
+    "d3-sankey": "^0.12.3",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
