--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ data/
 .venv/
 node_modules/
 server/__pycache__/*
-scripts\scripts\analysis_summaries\external_firewall_traffic.csv
-scripts\scripts\analysis_summaries\external_ids_traffic.csv
+scripts/scripts/analysis_summaries/external_firewall_traffic.csv
+scripts/scripts/analysis_summaries/external_ids_traffic.csv
